# DesignPatterns

./: CMakeLists.txt
TP1/include/DesignPatterns/Burger/: Burger.h
TP1/include/DesignPatterns/CoreUtils/: CoreUtils.h
TP1/include/DesignPatterns/Menus/: LargeMenu.h  MediumMenu.h  MenuFactory.h
TP1/src/: main.cpp
TP1/src/Burger/: Burger.cpp
TP1/src/BurgerBuilder/: BurgerBuilder.cpp
TP1/src/CoreUtils/: CoreUtils.cpp
TP1/src/Menus/: MediumMenu.cpp  SmallMenu.cpp
TP2/: CMakeLists.txt
TP2/TP1/include/DesignPatterns/Menus/: SmallMenu.h
TP2/TP1/src/Menus/: LargeMenu.cpp
TP2/include/DesignPatterns/Observer/: AObserver.h  FranceObserver.h  UnitedStatesObserver.h
TP2/include/DesignPatterns/Strategy/: ADisplayStrategy.h  FranceStrategy.h  UnitedStatesStrategy.h
TP2/include/DesignPatterns/Subject/: Subject.h
TP2/src/: main.cpp
TP2/src/Observer/: FranceObserver.cpp  UnitedStatesObserver.cpp
TP2/src/Strategy/: FranceDisplayStrategy.cpp  FranceStrategy.cpp  UnitedStatesStrategy.cpp
TP2/src/Subject/: Subject.cpp
TPModel/: CMakeLists.txt
TPModel/src/: main.cpp
include/DesignPatterns/BurgerBuilder/: BurgerBuilder.h
include/DesignPatterns/Menus/: AMenu.h
src/: main.cpp
src/Menus/: MenuFactory.cpp  SmallMenu.cpp
